<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Androidtest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hing">hinging</string>
    <string name="login">Login</string>
    <string name="enter_login">Enter your login here</string>
    <string name="password">Password</string>
    <string name="enter_password">Password</string>
    <string name="register">Register!</string>
    <string name="enter">Sign In</string>
    <string name="image1">Image 1</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="login_layout_msg">This is login layout</string>
    <string name="register_layout_msg">This is register layout</string>
    <string name="button_back">Back</string>
    <string name="login_field_error">Incorrect login</string>
    <string name="password_field_error">Incorrect password</string>

</resources>